--- a/src/main/resources/com/example/flappybird/Screen.fxml
+++ b/src/main/resources/com/example/flappybird/Screen.fxml
@@ -1,16 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.*?>
+<?import javafx.scene.canvas.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.flappybird.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
-
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="670.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.flappybird.Controller">
+   <children>
+      <ImageView fx:id="Background" fitHeight="1000.0" fitWidth="673.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../IMGS/b2b084ad6061dfe2122302266ea8af58.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="Bird" fitHeight="57.0" fitWidth="89.0" layoutX="292.0" layoutY="241.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../IMGS/Screenshot_2024-12-19_215753-removebg-preview.png" />
+         </image>
+      </ImageView>
+      <Canvas fx:id="canvas" height="844.0" layoutX="2.0" width="667.0" />
+      <Button fx:id="Start_Button" layoutX="233.0" layoutY="478.0" mnemonicParsing="false" onAction="#Start_game" prefHeight="44.0" prefWidth="200.0" style="-fx-background-color: orange; -fx-border-color: black; -fx-border-width: 3;" text="Start" textFill="WHITE">
+         <font>
+            <Font name="System Italic" size="24.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Label fx:id="Title_Label" layoutX="129.0" layoutY="91.0" prefHeight="109.0" prefWidth="400.0" text="FLAPPY BIRD" textFill="#1ebf23">
+         <font>
+            <Font name="System Bold" size="64.0" />
+         </font>
+      </Label>
+      <Label fx:id="Points_Label" layoutX="258.0" layoutY="49.0" prefHeight="41.0" prefWidth="142.0" text="Points: 0" textAlignment="CENTER" textFill="#ffc300" visible="false">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+   </children>
+</AnchorPane>
