--- a/src/main/resources/com/example/flappybird/Screen.fxml
+++ b/src/main/resources/com/example/flappybird/Screen.fxml
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.*?>
-<?import javafx.scene.canvas.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="670.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.flappybird.Controller">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="670.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.flappybird.Controller">
    <children>
-      <ImageView fx:id="Background" fitHeight="1000.0" fitWidth="673.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="Background_Flappy_Bird" fitHeight="1000.0" fitWidth="973.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../IMGS/b2b084ad6061dfe2122302266ea8af58.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="Background_Dunk_Mode" fitHeight="1039.0" fitWidth="691.0" pickOnBounds="true" preserveRatio="true" visible="false">
+         <image>
+            <Image url="@../../../../../../../../OneDrive/Bilder/Background_Dunk_Mode.jpg" />
          </image>
       </ImageView>
       <ImageView fx:id="Bird" fitHeight="57.0" fitWidth="89.0" layoutX="292.0" layoutY="241.0" pickOnBounds="true" preserveRatio="true">
@@ -19,7 +26,12 @@
             <Image url="@../../../IMGS/Screenshot_2024-12-19_215753-removebg-preview.png" />
          </image>
       </ImageView>
-      <Canvas fx:id="canvas" height="844.0" layoutX="2.0" width="667.0" />
+      <ImageView fx:id="Ball" fitHeight="72.0" fitWidth="86.0" layoutX="292.0" layoutY="234.0" pickOnBounds="true" preserveRatio="true" visible="false">
+         <image>
+            <Image url="@../../../IMGS/Ball-removebg-preview.png" />
+         </image>
+      </ImageView>
+      <Canvas fx:id="canvas" height="914.0" layoutX="1.0" layoutY="-2.0" width="667.0" />
       <Button fx:id="Start_Button" layoutX="233.0" layoutY="478.0" mnemonicParsing="false" onAction="#Start_game" prefHeight="44.0" prefWidth="200.0" style="-fx-background-color: orange; -fx-border-color: black; -fx-border-width: 3;" text="Start" textFill="WHITE">
          <font>
             <Font name="System Italic" size="24.0" />
@@ -37,5 +49,21 @@
             <Font size="36.0" />
          </font>
       </Label>
+      <Button fx:id="Change_Mode_Button" layoutX="235.0" layoutY="588.0" mnemonicParsing="false" onAction="#Change_Mode" prefHeight="44.0" prefWidth="200.0" style="-fx-background-color: orange; -fx-border-color: black; -fx-border-width: 3;" text="Change Mode" textFill="WHITE">
+         <font>
+            <Font name="System Italic" size="24.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button fx:id="Close_Game_Button" layoutX="233.0" layoutY="690.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="200.0" style="-fx-background-color: orange; -fx-border-color: black; -fx-border-width: 3;" text="EXIT" textFill="WHITE">
+         <font>
+            <Font name="System Italic" size="24.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
    </children>
 </AnchorPane>
