--- a/src/main/resources/com/example/flappybird/Screen.fxml
+++ b/src/main/resources/com/example/flappybird/Screen.fxml
@@ -23,12 +23,12 @@
       </ImageView>
       <ImageView fx:id="Bird" fitHeight="57.0" fitWidth="89.0" layoutX="292.0" layoutY="241.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../IMGS/Screenshot_2024-12-19_215753-removebg-preview.png" />
+            <Image url="@../../../IMGS/Bird.png" />
          </image>
       </ImageView>
       <ImageView fx:id="Ball" fitHeight="72.0" fitWidth="86.0" layoutX="292.0" layoutY="234.0" pickOnBounds="true" preserveRatio="true" visible="false">
          <image>
-            <Image url="@../../../IMGS/Ball-removebg-preview.png" />
+            <Image url="@../../../IMGS/Ball.png" />
          </image>
       </ImageView>
       <Canvas fx:id="canvas" height="914.0" layoutX="1.0" layoutY="-2.0" width="667.0" />
