Worked out some sounds, and the first version of Flappy_Dunk. Flappy_Bird is now on version 2.0 and finished. Also added more timelines to make things look smoother!

--- a/src/main/resources/com/example/flappybird/ChangeModePopup.fxml
+++ b/src/main/resources/com/example/flappybird/ChangeModePopup.fxml
@@ -53,7 +53,7 @@
             </LinearGradient>
          </fill>
       </Rectangle>
-      <Button fx:id="Button_close" layoutX="574.0" layoutY="1.0" mnemonicParsing="false" onAction="#close" style="-fx-background-color: transparent;" text="X">
+      <Button fx:id="Button_close" layoutX="574.0" layoutY="1.0" mnemonicParsing="false" onAction="#close" onMouseEntered="#on_X_hover" style="-fx-background-color: transparent;" text="X">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
